[package]
name = "template-ch32v003"
description = "A basic template for Rust projects based on the CH32v003"
version = "0.1.0"
edition = "2021"
authors = ["Broderick Carlin <broderick.carlin@gmail.com>"]
readme = "README.md"
repository = "https://github.com/BroderickCarlin/template-ch32v003"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-executor = { version = "0.6", features = [
    "integrated-timers",
    "task-arena-size-128",
    "arch-spin",
    "executor-thread",
    # "defmt",
] }
embassy-time = { version = "0.3", features = [
    # "defmt",
    # "defmt-timestamp-uptime",
] }
# embassy-sync = { version = "0.6", features = ["defmt"] }

# deps needed for USB serial support
# embassy-usb = { version = "0.4", features = ["defmt"] }
# static_cell = { version = "2.0.0" }
# portable-atomic = { version = "1.5", features = [
#     "critical-section",
# ] } # needed for static_cell on thumbv6

# defmt = "0.3"
# defmt-rtt = "0.4"
ch32-hal = { git = "https://github.com/ch32-rs/ch32-hal.git", features = [
    "ch32v003f4u6",
    "memory-x",
    "embassy",
    "time-driver-tim2",
    "rt",
] }

# This is okay because we should automatically use whatever ch32-hal uses
qingke = "*"
qingke-rt = { version = "*", features = ["highcode"] }


panic-halt = "1.0"

[profile.release]
strip = false   # symbols are not flashed to the microcontroller, so don't strip them.
lto = true
opt-level = "s" # Optimize for size.
